specs/blueprints/errors/parsing/unterminated_escaped_key.eno
# A single field with an unterminated escaped key

-- input
`field: value
-- input

## ParseError

-- text
The key escape sequence in line 1 is not terminated before the end of the line.
-- text

-- snippet
   Line | Content
 >    1 | `field: value
-- snippet

selection: [0,1] => [0,13]